# EduBridge_University_1.0.0

./: .env.prod.example  .gitattributes  .gitignore  docker-compose.prod.yml  presentation-marketing-posts.html  presentation-seo-geo.html
server/: .dockerignore  .env.example  Dockerfile  README.md  STRUCTURE.md  alembic.ini  create_admin.py  docker-compose.yml  entrypoint.sh  pyproject.toml
server/app/: main.py
server/app/api/: deps.py
server/app/api/v1/: ai.py  auth.py  cases.py  categories.py  documents.py  favourites.py  files.py  leads.py  lessons.py  notifications.py  posts.py  stages.py  training.py  universities.py  users.py
server/app/core/: config.py  credentials.py  limiter.py  security.py
server/app/models/: __init__.py  activity_log.py  admin_note.py  case.py  document.py  favourite.py  file.py  lead.py  lead_history.py  lesson.py  lesson_view.py  notification.py  post.py  post_category.py  refresh_token.py  reminder.py  requirement.py  stage.py  student_note.py  student_progress.py  student_requirement.py  student_stage_deadline.py  university.py  user.py
server/app/schemas/: auth.py  case.py  document.py  file.py  lead.py  lesson.py  notification.py  post.py  stage.py  training.py  university.py  user.py
server/app/services/: ai_service.py  auth_service.py  currency.py  document_service.py  email_service.py  file_service.py  matching_service.py  notification_service.py  post_service.py  requirements_parser.py  specialty_matcher.py  training_service.py  university_service.py  user_service.py
server/app/tasks/: deadline_checker.py
(+136 files in other folders)
