[tool.poetry]
name = "edubridge-university"
version = "1.0.0"
description = "Backend API for EduBridge University — student application platform"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = { version = "0.29.0", extras = ["standard"] }
sqlalchemy = "2.0.30"
alembic = "1.13.1"
psycopg2-binary = "2.9.9"
pydantic-settings = "2.2.1"
pydantic = { version = "2.7.1", extras = ["email"] }
python-jose = { version = "3.3.0", extras = ["cryptography"] }
passlib = { version = "1.7.4", extras = ["bcrypt"] }
minio = "7.2.7"
python-multipart = "0.0.9"
apscheduler = "3.10.4"
transliterate = "1.10.2"
email-validator = "2.1.1"
slowapi = "0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
